# DFO_MAR_DataShop_ProcessingToolbox

./: .gitignore  README.md  main.py  pyproject.toml  run_MTR_tools.py  run_SEABIRD_tools.py
help/: Datashop_Toolbox_Quality_Control_Tests.xlsx  Setup_Initial.txt  UV_Help.txt  git_Help.txt
logs/: datashop_MTR_Processing_log_20260324_151030.txt  datashop_MTR_Processing_log_20260325_091653.txt  datashop_MTR_QC_log_20260324_150625.txt  datashop_MTR_QC_log_20260325_130833.txt  datashop_MTR_QC_log_20260325_130838.txt  datashop_MTR_QC_log_20260325_131554.txt  datashop_MTR_QC_log_20260325_131636.txt  datashop_MTR_QC_log_20260325_131701.txt  datashop_MTR_QC_log_20260325_131719.txt  datashop_MTR_QC_log_20260325_131816.txt  datashop_MTR_QC_log_20260325_131902.txt  datashop_MTR_QC_log_20260325_131926.txt  datashop_MTR_QC_log_20260325_132040.txt  datashop_MTR_QC_log_20260325_132315.txt  datashop_MTR_QC_log_20260325_132316.txt  datashop_MTR_QC_log_20260325_133413.txt  datashop_MTR_QC_log_20260325_141710.txt  datashop_MTR_QC_log_20260325_141856.txt  datashop_MTR_QC_log_20260325_142924.txt  datashop_MTR_QC_log_20260325_143632.txt  datashop_MTR_QC_log_20260325_144528.txt  datashop_MTR_QC_log_20260325_144838.txt  datashop_MTR_QC_log_20260327_091355.txt  datashop_MTR_QC_log_20260327_091446.txt  datashop_MTR_QC_log_20260327_093012.txt  datashop_MTR_QC_log_20260327_093202.txt  datashop_MTR_QC_log_20260327_100028.txt  datashop_MTR_QC_log_20260327_100134.txt  datashop_MTR_QC_log_20260327_105035.txt
sampledata/TSG/: TSG_PIR_001.cnv  TSG_PIR_010.cnv
sampledata/cnv/: D900a108.CNV  D900b096.CNV  D900b097.CNV
src/cotede/: __init__.py  datasets.py  qc.py  version.py
src/datashop_toolbox/: __init__.py  ai_thermograph_data.py  basehdr.py  compare_seabird_xmlcons.py  compasshdr.py  concatenate_qat_files.py  create_parameters_database.py  cruisehdr.py  demo_validated_base.py  eventhdr.py  generalhdr.py  generate_metadata_report.py  historyhdr.py  instrumenthdr.py  log_window.py  lookup_parameter.py  metadata_report.py  meteohdr.py  multinet.py  (+15 more)
src/datashop_toolbox.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+59 files in other folders)
