[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "datashop-toolbox"
version = "1.0.0"
description = "DFO-MAR Python toolbox for oceanographic data processing"
readme = "README.md"
requires-python = ">=3.11"

authors = [
    {name = "DFO-MAR"}
]

dependencies = [
    # --- scientific stack ---
    "numpy>=2.3",
    "pandas>=2.3",
    "scipy>=1.16.3",
    "matplotlib>=3.7.5",
    "netcdf4>=1.7.2",
    "xarray>=2023.1.0",
    "gsw>=3.6.20",
    "click>=6.6",

    # --- datashop toolbox dependencies ---
    "dotenv>=0.9.9",
    "jinja2>=3.1.6",
    "openpyxl>=3.1.5",
    "oracledb>=3.3.0",
    "pydantic>=2.11.7",
    "pyqtgraph>=0.14.0",
    "pyrsktools>=1.1.1",
    "pyside6>=6.10.2",
    "python-dateutil>=2.9.0.post0",
    "pytz>=2025.2",
    "termcolor>=3.1.0",

    # oceanographic database
    "oceansdb"
]

# -----------------------------
# uv configuration
# -----------------------------

[tool.uv]
package = true

[tool.uv.sources]
oceansdb = { path = "dist/oceansdb-0.9.1.dev0+gb7ed876.d20251217-py3-none-any.whl" }

# -----------------------------
# setuptools src layout
# -----------------------------

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

# -----------------------------
# package data (needed for GUI)
# -----------------------------

[tool.setuptools.package-data]
datashop_toolbox = [
    "database/parameters.db",
    "gui/**/*.ui",
    "gui/templates/*.json"
]

# -----------------------------
# dependency groups
# -----------------------------

[dependency-groups]

dev = [
    "icecream>=2.1.7",
    "ruff>=0.15.0"
]

typing = [
    "pandas-stubs>=2.3"
]

# -----------------------------
# ruff config
# -----------------------------

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = ["E","F","I","B","UP"]

[tool.ruff.lint.source]
exclude = [
    ".venv",
    "build",
    "dist"
]